; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_stm32-adc.c_stm32_adc_writel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_stm32-adc.c_stm32_adc_writel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stm32_adc = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stm32_adc*, i64, i64)* @stm32_adc_writel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stm32_adc_writel(%struct.stm32_adc* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.stm32_adc*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.stm32_adc* %0, %struct.stm32_adc** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.stm32_adc*, %struct.stm32_adc** %4, align 8
  %9 = getelementptr inbounds %struct.stm32_adc, %struct.stm32_adc* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load %struct.stm32_adc*, %struct.stm32_adc** %4, align 8
  %14 = getelementptr inbounds %struct.stm32_adc, %struct.stm32_adc* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %12, %15
  %17 = load i64, i64* %5, align 8
  %18 = add nsw i64 %16, %17
  %19 = call i32 @writel_relaxed(i64 %7, i64 %18)
  ret void
}

declare dso_local i32 @writel_relaxed(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
